crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__compare__missing_rhs_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/compare/missing_rhs_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..3,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 0..3,
                            ops: [
                                Gt,
                            ],
                            operands: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 3..3,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            runtime_comparators: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 5..10,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 5..10,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 5..6,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 9..10,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | x >
  |    ^ Syntax Error: Expected an expression
2 |
3 | 1 + 2
  |
